--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
     <div class="form-group">
         <label>Fasilitas & Spesifikasi Unit</label>
-        <input type="text" id="bus-features" placeholder="Contoh: 50 Seat, AC, Toilet, Karaoke, Wifi">
+        <input type="text" id="bus-features" placeholder="Contoh: AC, TV, Kulkas, Karaoke, Wifi">
     </div>
 
 <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; gap:10px;">
@@ -2340,5 +2340,6 @@ function setQuickFilter(status) {
     </script>
 </body>
 </html>
+
 
 
