--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <input type="hidden" id="bus-edit-id">
     <div class="form-group">
         <label id="fleet-form-title">Tambah Unit Baru</label>
-        <input type="text" id="bus-name" required placeholder="Nama Unit (Contoh: Big Bus Jetbus 5)" onkeyup="autoFillCategory(this.value)">
+        <input type="text" id="bus-name" required placeholder="Nama Unit (Contoh: Jetbus 5, JB5-Tsubasa, JB5-Kuning)" onkeyup="autoFillCategory(this.value)">
     </div>
     
     <div class="form-group">
@@ -2340,6 +2340,7 @@ function setQuickFilter(status) {
     </script>
 </body>
 </html>
+
 
 
 
